fix : Ui issues

--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
                 <!-- <a href="#">See Projects</a> -->
             </div>
         </div>
-        <img src="assest/img/Ellipse 1.png" alt="">
+        <img id="img1" src="assest/img/Ellipse 1.png" alt="">
     </section>
     <section>
         <div class="row">
             <div class="center1">
-                <h3>Recent posts</h3>
+                <h3 id="center11">Recent posts</h3>
                 <p><a class="row222" href="#">view all</a></p>
             </div>
             <div class="clearfix">
@@ -109,7 +109,7 @@
     <section>
         <footer>
             <div id="center3">
-                <p class="ic on">
+                <p class="icon_1">
                     <i class='bx bxl-facebook-square bx-lg'></i>
                     <i class='bx bxl-instagram bx-lg'></i>
                     <i class='bx bxl-twitter bx-lg'></i>
