--- a/works.html
+++ b/works.html
@@ -63,7 +63,7 @@
     <section>
         <footer>
             <div id="center3">
-                <p class="ic on">
+                <p class="icon_1">
                     <i class='bx bxl-facebook-square bx-lg'></i>
                     <i class='bx bxl-instagram bx-lg'></i>
                     <i class='bx bxl-twitter bx-lg'></i>
