fix : Ui issues sohan

--- a/WorkDetail.html
+++ b/WorkDetail.html
@@ -11,19 +11,19 @@
 </head>
 
 <body>
-    <header>
+    <header class="header container">
         <nav class="navigation">
             <ul>
                 <li><a href="blog.html">Blog</a></li>
-                <li><a href="WorkDetail.html" class="active">Works</a></li>
+                <li><a href="works.html"  class="active">Works</a></li>
                 <li><a href="index.html">Contact</a></li>
-            </ul>
 
+            </ul>
         </nav>
     </header>
     <section>
-        <div class="center3">
-            <h3>Designing Dashboards with <br>usability in mind</h3>
+        <div class=" container">
+            <h3 class="mind">Designing Dashboards with <br>usability in mind</h3>
             <p><samp id="typo_2">2020</samp> Dashboard, User Experience Design</p>
             <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis
                 enim
@@ -39,19 +39,17 @@
         </div>
     </section>
 
-    <section>
-        <footer>
-            <div id="center3">
-                <p class="icon_1">
-                    <i class='bx bxl-facebook-square bx-lg'></i>
-                    <i class='bx bxl-instagram bx-lg'></i>
-                    <i class='bx bxl-twitter bx-lg'></i>
-                    <i class='bx bxl-linkedin-square bx-lg'></i>
-                <p class="icon_1">Copyright ©2020 All rights reserved</p>
-                </p>
-            </div>
-        </footer>
-    </section>
+    <footer>
+        <div id="center3">
+            <p class="icon">
+                <i class='bx bxl-facebook-square bx-lg'></i>
+                <i class='bx bxl-instagram bx-lg'></i>
+                <i class='bx bxl-twitter bx-lg'></i>
+                <i class='bx bxl-linkedin-square bx-lg'></i>
+            </p>
+            <p class="icon_text">Copyright ©2020 All rights reserved</p>
+        </div>
+    </footer>
 
 </body>
 
