--- a/blog.html
+++ b/blog.html
@@ -11,60 +11,62 @@
 </head>
 
 <body>
-    <header>
+    <header class="header container">
         <nav class="navigation">
             <ul>
-                <li><a href="blog.html" class="active">Blog</a></li>
+                <li><a href="blog.html"  class="active">Blog</a></li>
                 <li><a href="works.html">Works</a></li>
                 <li><a href="index.html">Contact</a></li>
-            </ul>
 
+            </ul>
         </nav>
     </header>
 
-    <div class="center">
-        <div class="">
-            <h3>UI Interactions of the week</h3>
-            <p>12 Feb 2019 | <span id="typo">Express, Handlebars</span></p>
-            <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis
-                enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
-        </div>
-        <hr>
-        <div class="week">
-            <h3>UI Interactions of the week</h3>
-            <p>12 Feb 2019 | <span id="typo">Express, Handlebars</span></p>
-            <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis
-                enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
-        </div>
-        <hr>
-        <div class="week">
-            <h3>UI Interactions of the week</h3>
-            <p>12 Feb 2019 | <span id="typo">Express, Handlebars</span></p>
-            <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis
-                enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
-        </div>
-        <hr>
-        <div class="week">
-            <h3>UI Interactions of the week</h3>
-            <p>12 Feb 2019 | <span id="typo">Express, Handlebars</span></p>
-            <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis
-                enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
-        </div>
-        <hr>
-    </div>
     <section>
-        <footer>
-            <div id="center3">
-                <p class="icon_1">
-                    <i class='bx bxl-facebook-square bx-lg'></i>
-                    <i class='bx bxl-instagram bx-lg'></i>
-                    <i class='bx bxl-twitter bx-lg'></i>
-                    <i class='bx bxl-linkedin-square bx-lg'></i>
-                <p class="icon_1">Copyright ©2020 All rights reserved</p>
+        <div class="center container">
+            <div>
+                <h1>Blog</h1>
                 </p>
-            </div>
-        </footer>
+                <h3>UI Interactions of the week</h3>
+                <p><span id="typo_1">12 Feb 2019</span> <span id="typo">Express, Handlebars</span></p>
+                <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat
+                    duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+            </div><hr>
+            <div>
+                </p>
+                <h3>UI Interactions of the week</h3>
+                <p><span id="typo_1">12 Feb 2019</span> <span id="typo">Express, Handlebars</span></p>
+                <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat
+                    duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+            </div><hr>
+            <div>
+                </p>
+                <h3>UI Interactions of the week</h3>
+                <p><span id="typo_1">12 Feb 2019</span> <span id="typo">Express, Handlebars</span></p>
+                <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat
+                    duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+            </div><hr>
+            <div>
+                </p>
+                <h3>UI Interactions of the week</h3>
+                <p><span id="typo_1">12 Feb 2019</span> <span id="typo">Express, Handlebars</span></p>
+                <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat
+                    duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+            </div><hr>
+           
+        </div>
     </section>
+    <footer>
+        <div id="center3">
+            <p class="icon">
+                <i class='bx bxl-facebook-square bx-lg'></i>
+                <i class='bx bxl-instagram bx-lg'></i>
+                <i class='bx bxl-twitter bx-lg'></i>
+                <i class='bx bxl-linkedin-square bx-lg'></i>
+            </p>
+            <p class="icon_text">Copyright ©2020 All rights reserved</p>
+        </div>
+    </footer>
 
 </body>
 
