--- a/works.html
+++ b/works.html
@@ -11,68 +11,72 @@
 </head>
 
 <body>
-    <header>
+    <header class="header container">
         <nav class="navigation">
             <ul>
                 <li><a href="blog.html">Blog</a></li>
-                <li><a href="WorkDetail.html" class="active">Works</a></li> <!-- WorkDetail.html url -->
+                <li><a href="WorkDetail.html" class="active">Works</a></li>
                 <li><a href="index.html">Contact</a></li>
-            </ul>
 
+            </ul>
         </nav>
     </header>
 
-    <div class="center">
-        <div>
-            <p><img id="img_1" src="assest/img/Rectangle 1.png" alt="Pineapple">
-            </p>
-            <h3>Designing Dashboards</h3>
-            <p><span id="typo_1">2022</span> <span id="typo">Dashboard</span></p>
-            <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis
-                enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
-        </div>
-        <hr>
-        <div>
-            <p><img id="img_1" src="assest/img/Rectangle 2.png" alt="Pineapple">
-            </p>
-            <h3>Vibrant Portraits of 2020</h3>
-            <p><span id="typo_1">2018</span> <span id="typo">Illustration</span></p>
-            <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis
-                enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
-        </div>
-        <hr>
-        <div>
-            <p><img id="img_1" src="assest/img/Rectangle 3.png" alt="Pineapple">
-            </p>
-            <h3>36 Days of Malayalam type</h3>
-            <p><span id="typo_1">2018</span> | <span id="typo">Typography</span></p>
-            <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis
-                enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
-        </div>
-        <hr>
-        <div>
-            <p><img id="img_1" src="assest/img/Rectangle 7.png" alt="Pineapple">
-            </p>
-            <h3>Components</h3>
-            <p><span id="typo_1">2018</span> | <span id="typo">Components, Design</span></p>
-            <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis
-                enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
-        </div>
-        <hr>
-    </div>
+    <!-- Featured works start -->
     <section>
-        <footer>
-            <div id="center3">
-                <p class="icon_1">
-                    <i class='bx bxl-facebook-square bx-lg'></i>
-                    <i class='bx bxl-instagram bx-lg'></i>
-                    <i class='bx bxl-twitter bx-lg'></i>
-                    <i class='bx bxl-linkedin-square bx-lg'></i>
-                <p class="icon_1">Copyright ©2020 All rights reserved</p>
+        <div class="center container">
+            <div>
+                <h1 class="works-1">works</h1>
+                <p><img id="img_1" src="assest/img/Rectangle 1.png" alt="Rectangle">
                 </p>
+                <h3>Designing Dashboards</h3>
+                <p><span id="typo_1">2022</span> <span id="typo">Dashboard</span></p>
+                <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat
+                    duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
             </div>
-        </footer>
+            <hr>
+            <div>
+                <p><img id="img_1" src="assest/img/Rectangle 2.png" alt="Rectangle">
+                </p>
+                <h3>Vibrant Portraits of 2020</h3>
+                <p><span id="typo_1">2018</span> <span id="typo">Illustration</span></p>
+                <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat
+                    duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+            </div>
+            <hr>
+            <div>
+                <p><img id="img_1" src="assest/img/Rectangle 3.png" alt="Rectangle">
+                </p>
+                <h3>36 Days of Malayalam type</h3>
+                <p><span id="typo_1">2018</span> | <span id="typo">Typography</span></p>
+                <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat
+                    duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+            </div>
+            <hr>
+            <div>
+                <p><img id="img_1" src="assest/img/Rectangle 7.png" alt="Rectangle">
+                </p>
+                <h3>Components</h3>
+                <p><span id="typo_1">2018</span> | <span id="typo">Components, Design</span></p>
+                <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat
+                    duis
+                    enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+            </div>
+            <hr>
+        </div>
     </section>
+    <!-- Featured works end -->
+    <footer>
+        <div id="center3">
+            <p class="icon">
+                <i class='bx bxl-facebook-square bx-lg'></i>
+                <i class='bx bxl-instagram bx-lg'></i>
+                <i class='bx bxl-twitter bx-lg'></i>
+                <i class='bx bxl-linkedin-square bx-lg'></i>
+            </p>
+            <p class="icon_text">Copyright ©2020 All rights reserved</p>
+        </div>
+    </footer>
 
 </body>
 
