fix :Featured works

--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
             <h3 class="works-lable">Featured works</h3>
         </div>
 
-        <div class="center container">
-            <div>
+        <div class="container">
+            <div class="container-lable">
                 <p><img id="img_1" src="assest/img/Rectangle 1.png" alt="Rectangle">
                 </p>
                 <h3>Designing Dashboards</h3>
@@ -85,7 +85,7 @@
                     duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
             </div>
             <hr>
-            <div>
+            <div class="container-lable">
                 <p><img id="img_1" src="assest/img/Rectangle 2.png" alt="Rectangle">
                 </p>
                 <h3>Vibrant Portraits of 2020</h3>
@@ -94,7 +94,7 @@
                     duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
             </div>
             <hr>
-            <div>
+            <div class="container-lable">
                 <p><img id="img_1" src="assest/img/Rectangle 3.png" alt="Rectangle">
                 </p>
                 <h3>36 Days of Malayalam type</h3>
