--- a/works.html
+++ b/works.html
@@ -24,8 +24,8 @@
 
     <!-- Featured works start -->
     <section>
-        <div class="center container">
-            <div>
+        <div class="container">
+            <div class="container-lable">
                 <h1 class="works-1">works</h1>
                 <p><img id="img_1" src="assest/img/Rectangle 1.png" alt="Rectangle">
                 </p>
@@ -35,7 +35,7 @@
                     duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
             </div>
             <hr>
-            <div>
+            <div class="container-lable">
                 <p><img id="img_1" src="assest/img/Rectangle 2.png" alt="Rectangle">
                 </p>
                 <h3>Vibrant Portraits of 2020</h3>
@@ -44,7 +44,7 @@
                     duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
             </div>
             <hr>
-            <div>
+            <div class="container-lable">
                 <p><img id="img_1" src="assest/img/Rectangle 3.png" alt="Rectangle">
                 </p>
                 <h3>36 Days of Malayalam type</h3>
@@ -53,7 +53,7 @@
                     duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
             </div>
             <hr>
-            <div>
+            <div class="container-lable">
                 <p><img id="img_1" src="assest/img/Rectangle 7.png" alt="Rectangle">
                 </p>
                 <h3>Components</h3>
